--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ confy = "2.0.0"
 inquire = "0.9.1"
 regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 walkdir = "2.5.0"
